--- a/ThereYet/Main.storyboard
+++ b/ThereYet/Main.storyboard
@@ -38,7 +38,7 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="fVK-ON-LJE" kind="show" id="ML6-GX-WZ5"/>
+                                    <segue destination="fVK-ON-LJE" kind="show" id="y6m-xl-MXl"/>
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="445-2K-hdm" customClass="TPKeyboardAvoidingScrollView">
